feat: add another color variable

--- a/src/common/style/abstracts/_variables.scss
+++ b/src/common/style/abstracts/_variables.scss
@@ -6,3 +6,4 @@ $font-color: #30323D;
 $form-border-color: #838CA7;
 $placeholder-color: #A5A5A5;
 $error-color: #C96666;
+$error-background-color: #FFE7E7;
