--- a/src/components/Register/NameInput/NameInput.module.scss
+++ b/src/components/Register/NameInput/NameInput.module.scss
@@ -2,11 +2,12 @@
 @import '../../../common/style/abstracts/mixins';
 
 .input {
+  width: 100%;
   height: 4.8rem;
   padding: 1.5rem 2rem;
   border: .1rem solid $form-border-color;
   border-radius: .4rem;
-  @include font(1.4rem, 1.7rem, 400);
+  @include font(1.6rem, 1.7rem, 400);
   transition: .5s;
 
   &:focus {
@@ -18,4 +19,19 @@
   &::placeholder {
     color: $placeholder-color;
   }
+
+  &_invalid {
+    color: $error-color;
+    border-color: $error-color;
+  }
+
+  &__wrapper {
+    position: relative;
+  }
+}
+
+.error {
+  @include font(1.1rem, 1, 400, $error-color);
+  position: absolute;
+  bottom: -1.2rem;
 }
