--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -1,9 +1,34 @@
+@import '../../../common/style/abstract/_variables.scss';
+
 .container {
+  position: fixed;
+  width: 100vw;
+  background-color: #fff;
+  z-index: 100;
+  margin: auto;
+  transition: background-color 0.5s ease;
+}
+
+.header {
   display: flex;
   justify-content: space-between;
   width: 100%;
   max-width: 1200px;
   padding: 0 100px;
   box-sizing: border-box;
-  margin: auto;
+  margin: 20px auto;
+  z-index: inherit;
+  @media screen and (max-width: $small) {
+    padding: 0 50px;
+  }
+  @media screen and (max-width: $extra-small) {
+    padding: 0 20px;
+  }
+}
+
+.scrolled {
+  background-color: #edf7ff;
+  select {
+    background-color: #edf7ff;
+  }
 }
