--- a/src/components/common/Header/HeaderButtons/HeaderButtons.module.scss
+++ b/src/components/common/Header/HeaderButtons/HeaderButtons.module.scss
@@ -1,4 +1,9 @@
+@import '../../../../common/style/abstract/variables';
+
 .container {
   display: flex;
   gap: 30px;
+  @media screen and (max-width: $medium) {
+    display: none;
+  }
 }
