--- a/src/components/pages/home/Guide/Guide.module.scss
+++ b/src/components/pages/home/Guide/Guide.module.scss
@@ -1,3 +1,5 @@
+@import '../../../../common/style/abstract/_variables.scss';
+
 .container {
   text-align: center;
   width: 100%;
@@ -5,4 +7,16 @@
   padding: 0 100px;
   box-sizing: border-box;
   margin: auto;
+  margin-bottom: 100px;
+  @media screen and (max-width: $medium) {
+    padding: 0 50px;
+  }
+  @media screen and (max-width: $small) {
+    padding: 0 10px;
+  }
+  h2 {
+    font: $paragraph-font;
+    font-size: 28px;
+    margin-bottom: 50px;
+  }
 }
