--- a/src/components/pages/home/Start/Start.module.scss
+++ b/src/components/pages/home/Start/Start.module.scss
@@ -1,3 +1,5 @@
+@import '../../../../common/style/abstract/_variables.scss';
+
 .container {
   display: flex;
   width: 100%;
@@ -6,4 +8,15 @@
   box-sizing: border-box;
   padding: 100px 100px;
   margin: auto;
+  @media screen and (max-width: $small) {
+    padding: 100px 50px;
+  }
+  @media screen and (max-width: $extra-small) {
+    padding: 100px 20px;
+  }
+  img {
+    @media screen and (max-width: $large) {
+      display: none;
+    }
+  }
 }
