--- a/src/components/pages/home/Team/TeamCard/TeamCard.module.scss
+++ b/src/components/pages/home/Team/TeamCard/TeamCard.module.scss
@@ -1,7 +1,26 @@
+@import '../../../../../common/style/abstract/_variables.scss';
 .container {
-  display: flex;
   width: 320px;
   height: 250px;
   border: 0.5px solid #30323d;
   border-radius: 10px;
+  font: $paragraph-font;
+  padding: 20px;
+  padding-right: 65px;
+  box-sizing: border-box;
+  img {
+    width: 80px;
+    height: 80px;
+    border-radius: 70px;
+  }
+  .content {
+    height: 80px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  h3 {
+    margin-bottom: 18px;
+  }
 }
