feat: add universal FormInput component

--- a/src/components/common/FormInput/FormInput.module.scss
+++ b/src/components/common/FormInput/FormInput.module.scss
@@ -27,6 +27,26 @@
 
   &__wrapper {
     position: relative;
+    width: 100%;
+  } 
+}
+
+.toggler {
+  cursor: pointer;
+  position: absolute;
+  z-index: 5;
+  right: 1.5rem;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 2rem;
+  height: 2rem;
+
+  &_invisible {
+    background: url('../../../../public/assets/icons/VisibilityToggler/invisible.svg') no-repeat center;
+  }
+
+  &_visible {
+    background: url('../../../../public/assets/icons/VisibilityToggler/visible.svg') no-repeat center;
   }
 }
 
