--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -13,13 +13,19 @@
     background-color: #8dbffa;
   }
 }
-.start {
+.blue {
   background-color: #5f96e9;
-  width: 263px;
+  width: 260px;
   height: 44px;
   color: #ffffff;
   transition: 0.5s;
   &:hover {
     background-color: #8dbffa;
   }
+}
+.header {
+  width: 145px;
+  height: 40px;
+  background-color: #5f96e9;
+  color: #ffffff;
 }
