--- a/src/common/style/abstracts/_variables.scss
+++ b/src/common/style/abstracts/_variables.scss
@@ -7,3 +7,16 @@ $form-border-color: #838CA7;
 $placeholder-color: #A5A5A5;
 $error-color: #C96666;
 $error-background-color: #FFE7E7;
+
+//FONTS
+$h1-font: 600 42px / 1.15 'Gilroy', sans-serif;
+$h2-font: 600 4.2rem / 1.2 'Gilroy', sans-serif;
+$h3-font: 600 2.6rem / 1.2 'Gilroy', sans-serif;
+$paragraph-font: 600 16px 'Gilroy', sans-serif;
+$text-font: 400 16px 'Gilroy', sans-serif;
+
+// MEDIA
+$extra-small: 378px;
+$small: 600px;
+$medium: 768px;
+$large: 992px;
