--- a/src/components/pages/home/Start/StartDescription/StartDescription.module.scss
+++ b/src/components/pages/home/Start/StartDescription/StartDescription.module.scss
@@ -7,6 +7,7 @@
   max-width: 340px;
   height: 240px;
   width: 100%;
+  margin-top: 4.5rem;
 
   @media screen and (max-width: $large) {
     width: 100%;
@@ -16,6 +17,7 @@
 
   h1 {
     font: $h1-font;
+    margin: 0;
 
     @media screen and (max-width: $small) {
       text-align: center;
@@ -25,5 +27,6 @@
   .description {
     font: $text-font;
     color: #7b7f8b;
+    margin: 2rem 0 4rem;
   }
 }
