--- a/src/components/common/Footer/Footer.module.scss
+++ b/src/components/common/Footer/Footer.module.scss
@@ -1,21 +1,21 @@
-@import '../../../common/style/abstracts/_variables.scss';
+@import '../../../common/style/abstracts/variables';
+@import '../../../common/style/abstracts/mixins';
 
 .container {
   width: 100%;
-  background: #edf7ff;
+  background: $header-bg-color;
   display: flex;
   justify-content: center;
 }
 
 .content {
-  height: 100px;
+  @include main-font;
+  height: 10rem;
   width: 100%;
-  max-width: 1200px;
+  max-width: 120rem;
   display: flex;
   justify-content: space-between;
-  padding: 40px 100px;
-  box-sizing: border-box;
-  font: $text-font;
+  padding: 4rem 10rem;
 
   @media screen and (max-width: $small) {
     justify-content: center;
@@ -25,7 +25,7 @@
   .profiles {
     display: flex;
     width: 100%;
-    max-width: 515px;
+    max-width: 51.5rem;
     justify-content: space-between;
 
     @media screen and (max-width: $small) {
