--- a/src/components/common/Footer/GitProfile/GitProfile.module.scss
+++ b/src/components/common/Footer/GitProfile/GitProfile.module.scss
@@ -1,9 +1,9 @@
-@import '../../../../common/style/abstracts/_variables.scss';
+@import '../../../../common/style/abstracts/variables';
 
 .container {
   display: flex;
 
   img {
-    margin-right: 10px;
+    margin-right: 1rem;
   }
 }
