--- a/src/components/common/FormError/FormError.module.scss
+++ b/src/components/common/FormError/FormError.module.scss
@@ -7,7 +7,7 @@
   border-radius: .4rem;
   padding: 1rem 2.2rem;
   margin-bottom: 2rem;
-  background: $error-background-color;
+  background: $error-bg-color;
   display: flex;
   gap: 1.2rem;
   align-items: center;
@@ -19,6 +19,6 @@
   }
 
   &__message {
-    @include font(1.4rem, 1.7rem, 400, $error-color)
+    @include second-font($error-color)
   }
 }
