--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -1,37 +1,36 @@
-@import '../../../common/style/abstracts/_variables.scss';
+@import '../../../common/style/abstracts/variables';
 
 .container {
+  width: 100%;
   position: fixed;
-  width: 100vw;
-  background-color: #fff;
+  background-color: white;
   z-index: 100;
   margin: auto;
   transition: background-color 0.5s ease;
 }
 
 .header {
+  max-width: 120rem;
   display: flex;
   justify-content: space-between;
-  width: 100%;
-  max-width: 1200px;
-  padding: 0 100px;
-  box-sizing: border-box;
-  margin: 20px auto;
+  align-items: center;
+  padding: 0 10rem;
+  margin: 2rem auto;
   z-index: inherit;
 
   @media screen and (max-width: $small) {
-    padding: 0 50px;
+    padding: 0 5rem;
   }
 
   @media screen and (max-width: $extra-small) {
-    padding: 0 20px;
+    padding: 0 2rem;
   }
 }
 
 .scrolled {
-  background-color: #edf7ff;
+  background-color: $header-bg-color;
 
   select {
-    background-color: #edf7ff;
+    background-color: $header-bg-color;
   }
 }
