--- a/src/components/common/Header/Logo/Logo.module.scss
+++ b/src/components/common/Header/Logo/Logo.module.scss
@@ -1,18 +1,13 @@
-@import '../../../../common/style/abstracts/_variables.scss';
+@import '../../../../common/style/abstracts/variables';
+@import '../../../../common/style/abstracts/mixins';
 
 .container {
   display: flex;
 
   h2 {
-    font: $paragraph-font;
-    color: #30323d;
-    line-height: 20px;
-    width: 100%;
-    max-width: 100px;
-    margin-left: 10px;
+    @include button-font;
+    line-height: 2rem;
+    max-width: 10rem;
+    margin-left: 1rem;
   }
-}
-
-a {
-  text-decoration: none;
 }
