--- a/src/components/pages/home/Guide/Guide.module.scss
+++ b/src/components/pages/home/Guide/Guide.module.scss
@@ -1,25 +1,24 @@
-@import '../../../../common/style/abstracts/_variables.scss';
+@import '../../../../common/style/abstracts/variables';
+@import '../../../../common/style/abstracts/mixins';
 
 .container {
   text-align: center;
   width: 100%;
-  max-width: 1200px;
-  padding: 0 100px;
-  box-sizing: border-box;
+  max-width: 120rem;
+  padding: 0 10rem;
   margin: auto;
-  margin-bottom: 100px;
+  margin-bottom: 10rem;
 
   @media screen and (max-width: $medium) {
-    padding: 0 50px;
+    padding: 0 5rem;
   }
 
   @media screen and (max-width: $small) {
-    padding: 0 10px;
+    padding: 0 1rem;
   }
 
   h2 {
-    font: $paragraph-font;
-    font-size: 28px;
-    margin-bottom: 50px;
+    @include h2;
+    margin-bottom: 5rem;
   }
 }
