--- a/src/components/pages/home/Start/Start.module.scss
+++ b/src/components/pages/home/Start/Start.module.scss
@@ -1,20 +1,14 @@
-@import '../../../../common/style/abstracts/_variables.scss';
+@import '../../../../common/style/abstracts/variables';
 
 .container {
   display: flex;
-  width: 100%;
-  max-width: 1200px;
+  max-width: 120rem;
   justify-content: space-between;
-  box-sizing: border-box;
-  padding: 100px 100px;
+  padding: 10rem;
   margin: auto;
 
-  @media screen and (max-width: $small) {
-    padding: 100px 50px;
-  }
-
-  @media screen and (max-width: $extra-small) {
-    padding: 100px 20px;
+  @media screen and (max-width: $medium) {
+    padding: 5rem;
   }
 
   img {
