--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -2,7 +2,7 @@
 @import '../../common/style/abstracts/mixins';
 
 .login {
-  border: .1rem solid $form-border-color;
+  border: .1rem solid $font-second-color;
   border-radius: .6rem;
   padding: 3rem;
   transition: .5s;
@@ -19,7 +19,7 @@
   }
 
   &__heading {
-    @include font(2.8rem, 3.43rem, 600);
+    @include h2;
     text-align: center;
     margin-bottom: 3rem;
   }
@@ -35,7 +35,7 @@
 .signup {
   margin-top: 2rem;
   text-align: center;
-  @include font(1.6rem, 2rem, 400)
+  @include main-font
 }
 
 .link {
