--- a/src/components/pages/home/Team/TeamCard/TeamCard.module.scss
+++ b/src/components/pages/home/Team/TeamCard/TeamCard.module.scss
@@ -1,30 +1,32 @@
-@import '../../../../../common/style/abstracts/_variables.scss';
+@import '../../../../../common/style/abstracts/variables';
+@import '../../../../../common/style/abstracts/mixins';
 
-.container {
-  width: 320px;
-  height: 250px;
-  border: 0.5px solid #30323d;
-  border-radius: 10px;
-  font: $paragraph-font;
-  padding: 20px;
-  padding-right: 65px;
-  box-sizing: border-box;
+.card {
+  @include main-font;
+  width: 32rem;
+  height: 25rem;
+  border: 0.05rem solid $font-main-color;
+  border-radius: 1rem;
+  padding: 2rem;
 
-  img {
-    width: 80px;
-    height: 80px;
-    border-radius: 70px;
-  }
-
-  .content {
-    height: 80px;
-    width: 100%;
+  &__header {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    margin-bottom: 2rem;
   }
 
-  h3 {
-    margin-bottom: 18px;
+  &__avatar {
+    width: 8rem;
+    height: 8rem;
+    border-radius: 50%;
+  }
+
+  &__name {
+    margin-left: 2rem;
+  }
+
+  &__description {
+    text-align: start;
+    color: $font-second-color;
   }
 }
