--- a/src/components/common/Header/HeaderBurger/HeaderBurger.module.scss
+++ b/src/components/common/Header/HeaderBurger/HeaderBurger.module.scss
@@ -2,37 +2,37 @@
 
 .burger_button {
   display: none;
-  width: 30px;
-  height: 30px;
-  margin-left: 30px;
   position: relative;
+  width: 3rem;
+  height: 3rem;
   cursor: pointer;
   transition: 1s;
+  z-index: 999;
 
-  &:after {
+  &:before,
+  &:after,
+  span {
     content: '';
     position: absolute;
-    top: 0;
-    width: 20px;
-    background-color: black;
-    height: 2px;
+    width: 3rem;
+    background-color: $font-main-color;
+    height: .2rem;
+    transition: 1s;
+    border-radius: 0.1rem;
   }
 
   &:before {
-    content: '';
-    position: absolute;
-    top: 30px;
-    width: 20px;
-    background-color: black;
-    height: 2px;
+    transform-origin: center left;
+    bottom: 0;
+  }
+
+  &:after {
+    top: 0;
+    transform-origin: center left;
   }
 
   span {
-    position: absolute;
-    top: 15px;
-    width: 20px;
-    background-color: black;
-    height: 2px;
+    top: 1.5rem;
   }
 
   @media screen and (max-width: $medium) {
@@ -41,21 +41,22 @@
 }
 
 .active {
-  transform: translateX(-100%);
+
+  &:before,
+  &:after {
+    width: 4rem;
+  }
 
   &:after {
-    transition: 1s;
-    transform: rotate(90deg) translateY(650%) translateX(75%);
+    transform: rotate(45deg);
   }
 
   span {
-    transition: 1s;
-    transform: rotate(90deg);
+    opacity: 0;
   }
 
   &:before {
-    transition: 1s;
-    transform: rotate(90deg) translateY(-650%) translateX(-75%);
+    transform: rotate(-45deg);
   }
 }
 
