--- a/src/components/common/Header/HeaderBurger/MenuBurger/MenuBurger.module.scss
+++ b/src/components/common/Header/HeaderBurger/MenuBurger/MenuBurger.module.scss
@@ -1,24 +1,26 @@
-@import '../../../../../common/style/abstracts/_variables.scss';
+@import '../../../../../common/style/abstracts/variables';
+@import '../../../../../common/style/abstracts/mixins';
 
 .menu {
+  @include main-font;
   position: fixed;
   top: 0;
   right: 0;
+  width: 100%;
   visibility: hidden;
   transform: translateX(100%);
   transition: 1s;
   height: 100vh;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
-  font: $paragraph-font;
-  font-size: 24px;
-  background-color: #edf7ff;
+  font-size: 2.4rem;
+  background-color: $header-bg-color;
   z-index: 100;
 
   li {
-    line-height: 50px;
-    list-style: none;
+    line-height: 5rem;
+    text-align: center;
   }
 
   a:visited {
