--- a/src/pages/NotFound/NotFound.module.scss
+++ b/src/pages/NotFound/NotFound.module.scss
@@ -1,45 +1,49 @@
-@import '../../common/style/abstracts/_variables.scss';
+@import '../../common/style/abstracts/variables';
+@import '../../common/style/abstracts/mixins';
 
 .container {
-  padding-top: 170px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  gap: 65px;
-  h1 {
-    font: $paragraph-font;
-    font-size: 32px;
-    text-align: center;
-    @media screen and (max-width: $medium) {
-      font-size: 28px;
+  text-align: center;
+  gap: 6rem;
+
+  @media screen and (max-width: $medium) {
+    padding: 0 1rem;
+    gap: 6rem;
+  }
+
+  .description {
+    &__heading {
+      @include h1;
+      margin-bottom: 3rem;
+
+      @media screen and (max-width: $medium) {
+        @include h2;
+      }
+
+      @media screen and (max-width: $small) {
+        @include h3;
+      }
+
+      @media screen and (max-width: $extra-small) {
+        margin: 0;
+      }
     }
-    @media screen and (max-width: $small) {
-      font-size: 22px;
-    }
-    @media screen and (max-width: $extra-small) {
-      padding-top: 150px;
+
+    &__message {
+      @include main-font;
+
+      @media screen and (max-width: $extra-small) {
+        display: none;
+      }
     }
   }
-  p {
-    font: $text-font;
-    @media screen and (max-width: $medium) {
-      font-size: 16px;
-    }
-    @media screen and (max-width: $small) {
-      font-size: 12px;
-      padding: 0 5px;
-    }
-    @media screen and (max-width: $extra-small) {
-      display: none;
-    }
-  }
+
   img {
-    max-width: 426px;
+    max-width: 58.6rem;
     width: 100%;
-    height: 226px;
-  }
-  @media screen and (max-width: $extra-small) {
-    font-size: 8px;
-    padding: 0 10px;
+    height: auto;
   }
 }
