--- a/src/common/style/abstracts/_variables.scss
+++ b/src/common/style/abstracts/_variables.scss
@@ -6,6 +6,8 @@ $font-main-color: #30323D;
 $font-second-color: #838CA7;
 $error-color: #DD5A5A;
 $error-bg-color: #FFE7E7;
+$success-color: #27AE60;
+$success-bg-color: #D9F8E6;
 $border-bg-color: #F8F9FD;
 $overlay-color: #00000080;
 
