fix: fix some basic styles

--- a/src/components/common/Footer/Footer.module.scss
+++ b/src/components/common/Footer/Footer.module.scss
@@ -15,6 +15,7 @@
   max-width: 120rem;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 4rem 10rem;
 
   @media screen and (max-width: $small) {
@@ -26,7 +27,9 @@
     display: flex;
     width: 100%;
     max-width: 51.5rem;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
 
     @media screen and (max-width: $small) {
       display: none;
