--- a/src/common/style/base/_reset.scss
+++ b/src/common/style/base/_reset.scss
@@ -1,3 +1,5 @@
+@import '../abstracts/variables';
+
 html {
   font-size: 10px;
 }
@@ -15,4 +17,5 @@ li {
 
 a {
   text-decoration: none;
+  color: $font-main-color;
 }
