--- a/src/components/pages/home/Start/Start.module.scss
+++ b/src/components/pages/home/Start/Start.module.scss
@@ -2,13 +2,19 @@
 
 .container {
   display: flex;
-  max-width: 120rem;
+  max-width: 100rem;
   justify-content: space-between;
-  padding: 10rem;
   margin: auto;
+  margin-bottom: 10rem;
+
+  @media screen and (max-width: $large) {
+    padding: 0 5rem;
+    margin-bottom: 5rem;
+  }
 
   @media screen and (max-width: $medium) {
-    padding: 5rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 
   img {
