--- a/src/components/common/modalDelete/modalDelete.module.scss
+++ b/src/components/common/modalDelete/modalDelete.module.scss
@@ -1,44 +1,63 @@
+@import '../../../common/style/abstracts/variables';
+@import '../../../common/style/abstracts/mixins';
+
 .container {
-  position: fixed;
-  top: 35%;
-  left: 30%;
-  width: 368px;
-  height: 168px;
-  box-sizing: border-box;
-  padding: 30px;
+  position: relative;
+  width: 36.8rem;
+  height: 16.8rem;
+  background: white;
+  padding: 3rem 3rem 2rem;
+  box-shadow: 0 .4rem .8rem #50505040;
+  border-radius: .4rem;
+  z-index: 101;
+
   display: flex;
   flex-direction: column;
   text-align: center;
+  justify-content: space-between;
   align-items: center;
-  gap: 30px;
-  opacity: 1;
-  background: #ffffff;
-  box-shadow: 0px 4px 8px rgba(80, 80, 80, 0.25);
-  border-radius: 4px;
-  z-index: 101;
-  .header {
-    position: relative;
-    h2 {
-      width: 100%;
-      max-width: 25.4rem;
-    }
-    .exit {
+
+  .heading {
+    @include h5;
+    max-width: 25.4rem;
+    width: 100%;
+  }
+
+  .exit {
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+    cursor: pointer;
+    width: 1.4rem;
+    height: 1.4rem;
+
+    &:before,
+    &:after {
+      content: '';
       position: absolute;
-      top: -3rem;
-      right: -2.5rem;
-      font-size: 2.5rem;
-      cursor: pointer;
+      width: 1.75rem;
+      height: 0.2rem;
+      left: 0;
+      border-radius: 0.1rem;
+      background: $font-main-color;
+      transform-origin: left center;
+    }
+
+    &:before {
+      top: 0;
+      transform: rotate(45deg);
+    }
+
+    &:after {
+      bottom: 0;
+      transform: rotate(-45deg);
     }
   }
-  .buttons {
-    display: flex;
-    width: 100%;
-    max-width: 308px;
-    justify-content: space-between;
 
-    button {
-      width: 100%;
-      max-width: 144px;
-    }
+  .buttons {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
   }
 }
