feat: add styles for dashbord page

--- a/src/components/pages/DeskLayout/Desk/Desk.module.scss
+++ b/src/components/pages/DeskLayout/Desk/Desk.module.scss
@@ -1,29 +1,60 @@
-.container {
+@import '../../../../common/style/abstracts/mixins';
+@import '../../../../common/style/abstracts/variables';
+
+.card {
+  position: relative;
+  width: 23.5rem;
+  height: 15rem;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
+  background: white;
+  box-shadow: 0px .4rem .6rem #b7c8e040;
+  border-radius: .4rem;
+  cursor: pointer;
+  transition: .5s;
 
-  width: 255px;
-  height: 150px;
-
-  background: #ffffff;
-  box-shadow: 0px 4px 6px rgba(183, 200, 224, 0.25);
-  border-radius: 4px;
-
-  padding: 20px;
-  z-index: 1;
-
-  .header,
-  .description {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+  &:hover {
+    box-shadow: 0px 1rem 1rem #818d9e40;
   }
-  .header {
-    margin-bottom: 15px;
+
+  &__content {
+    width: 16.5rem;
+
+    &__heading {
+      @include h5;
+      margin-bottom: 1.5rem;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    &__description {
+      @include second-font($font-second-color);
+      height: 7rem;
+      overflow: hidden;
+      text-overflow: clip;
+      white-space: normal;
+    }
   }
+
+  &__icon_edit,
+  &__icon_delete {
+    position: absolute;
+    right: 2.2rem;
+  }
+
+  &__icon_edit {
+    top: 2.2rem;
+  }
+
+  &__icon_delete {
+    bottom: 2.2rem;
+  }
+
   .description {
     height: 65%;
+
     img {
       position: absolute;
       right: 0px;
