--- a/src/components/pages/DeskLayout/DeskLayout.module.scss
+++ b/src/components/pages/DeskLayout/DeskLayout.module.scss
@@ -1,29 +1,58 @@
-.container {
+@import '../../../common/style/abstracts/mixins';
+
+.dashboard {
+  background: #F8F9FD;
+
+  &__container {
+    width: 100%;
+    max-width: 110rem;
+    padding: 0 5rem;
+    height: 100%;
+    margin: auto;
+    display: grid;
+    grid-template-rows: 6.4rem 1fr;
+
+    @media screen and (max-width: $small) {
+      padding: 0 2rem;
+    }
+  }
+
+  &__heading {
+    @include h2;
+    margin-bottom: 3rem;
+  }
+}
+
+.boards {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   display: flex;
-  flex-direction: column;
-  width: 100%;
-  max-width: 1200px;
-  padding: 0 100px;
-  padding-top: 100px;
-  box-sizing: border-box;
-  margin: 20px auto;
-}
+  flex-wrap: wrap;
+  align-content: flex-start;
+  gap: 2rem;
 
-h1 {
-  font-size: 2.8rem;
-  margin-bottom: 3rem;
-}
-.layout {
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(4, 1fr);
-}
+  &__container {
+    position: relative;
+    overflow-y: auto;
 
-.shadowContaner {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  background-color: black;
-  opacity: 0.5;
-  z-index: 100;
+    &::-webkit-scrollbar {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: .5rem;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: #bbbbbb;
+      border-radius: .25rem;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: #dadada;
+      border-radius: .25rem;
+    }
+  }
 }
