--- a/src/pages/Register/Register.module.scss
+++ b/src/pages/Register/Register.module.scss
@@ -17,6 +17,11 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding: 0 5rem;
+
+    @media (max-width: $small) {
+      padding: 0 2rem;
+    }
   }
 
   &__heading {
