--- a/src/components/pages/DeskLayout/ModalDesk/ModalDesk.module.scss
+++ b/src/components/pages/DeskLayout/ModalDesk/ModalDesk.module.scss
@@ -1,52 +1,105 @@
+@import '../../../../common/style/abstracts/variables';
+@import '../../../../common/style/abstracts/mixins';
+
 .container {
-  position: fixed;
-  top: 25%;
-  left: 35%;
-  width: 340px;
-  height: 365px;
-  box-sizing: border-box;
-  padding: 30px;
-  display: flex;
+  position: relative;
+  width: 34rem;
+  padding: 3rem;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
-  opacity: 1;
-
-  background: #ffffff;
+  gap: 3rem;
+  background: white;
   box-shadow: 0px 4px 8px rgba(80, 80, 80, 0.25);
-  border-radius: 4px;
-  z-index: 101;
-  .header {
-    position: relative;
-    width: 100%;
-    max-width: 24.4rem;
-    text-align: center;
+  border-radius: .4rem;
+}
 
-    h2 {
-      font-size: 2.4rem;
-    }
-    .exit {
-      position: absolute;
-      top: -3rem;
-      right: -2.5rem;
-      font-size: 2.6rem;
-      cursor: pointer;
-    }
+.heading {
+  @include h3;
+  margin-bottom: 3rem;
+  text-align: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-bottom: 3rem;
+}
+
+.exit {
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+  cursor: pointer;
+  width: 1.4rem;
+  height: 1.4rem;
+
+  &:before,
+  &:after {
+    content: '';
+    position: absolute;
+    width: 1.75rem;
+    height: 0.2rem;
+    left: 0;
+    border-radius: 0.1rem;
+    background: $font-main-color;
+    transform-origin: left center;
   }
 
-  .deskName {
-    width: 280px;
-    height: 48px;
-
-    border: 1px solid #838ca7;
-    border-radius: 4px;
-    margin-bottom: 20px;
+  &:before {
+    top: 0;
+    transform: rotate(45deg);
   }
-  .deskDescription {
-    width: 280px;
-    height: 100px;
 
-    border: 1px solid #838ca7;
-    border-radius: 4px;
+  &:after {
+    bottom: 0;
+    transform: rotate(-45deg);
+  }
+}
+
+.input {
+  @include main-font;
+  width: 100%;
+  height: 48px;
+  border: 1px solid $font-second-color;
+  border-radius: .4rem;
+  padding: 1.5rem 2rem;
+  transition: .3s;
+
+  &::placeholder {
+    @include second-font($font-second-color);
+  }
+
+  &:focus {
+    outline: none;
+    border-color: $main-color;
+    box-shadow: 0 0 0 .1rem $main-color;
+  }
+
+  &__wrapper {
+    & span {
+      @include input-signature-font($font-second-color);
+      margin-bottom: .2rem;
+    }
+  }
+}
+
+.textarea {
+  resize: none;
+  height: 10rem;
+
+  &::-webkit-scrollbar {
+    position: absolute;
+    width: .5rem;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: white;
+    border-radius: .25rem;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: $main-color-hover;
+    border-radius: .25rem;
   }
 }
