--- a/src/components/pages/home/Guide/Guide.module.scss
+++ b/src/components/pages/home/Guide/Guide.module.scss
@@ -4,17 +4,17 @@
 .container {
   text-align: center;
   width: 100%;
-  max-width: 120rem;
-  padding: 0 10rem;
+  max-width: 110rem;
+  padding: 0 5rem;
   margin: auto;
   margin-bottom: 10rem;
 
-  @media screen and (max-width: $medium) {
-    padding: 0 5rem;
+  @media screen and (max-width: $large) {
+    margin-bottom: 5rem;
   }
 
   @media screen and (max-width: $small) {
-    padding: 0 1rem;
+    padding: 0 2rem;
   }
 
   h2 {
