--- a/src/components/pages/BoardLayout/Column/Column.module.scss
+++ b/src/components/pages/BoardLayout/Column/Column.module.scss
@@ -4,9 +4,10 @@
   position: relative;
   width: 23.5rem;
   max-height: 100%;
+  min-height: 15rem;
   background: white;
-  box-shadow: 0 .4rem 0.6rem #b7c8e040;
-  border-radius: .4rem;
+  box-shadow: 0 0.4rem 0.6rem #b7c8e040;
+  border-radius: 0.4rem;
   padding: 2.4rem 2rem 2rem;
 
   &__heading {
@@ -25,7 +26,7 @@
     height: 1.6rem;
     background: url('../../../../../public/assets/icons/deskLayout/garbage.svg') no-repeat center;
     cursor: pointer;
-    transition: .3s;
+    transition: 0.3s;
 
     &:hover {
       transform: scale(1.3);
