feat: add column styles

--- a/src/components/pages/BoardLayout/Column/Column.module.scss
+++ b/src/components/pages/BoardLayout/Column/Column.module.scss
@@ -4,11 +4,12 @@
   position: relative;
   width: 23.5rem;
   min-height: 15rem;
+  max-height: calc(100% - 1rem);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   background: white;
   box-shadow: 0 .4rem 0.6rem #b7c8e040;
   border-radius: .4rem;
   padding: 2.4rem 2rem 2rem;
+  overflow: hidden;
 }
