--- a/src/components/pages/BoardLayout/Column/TasksContainer/TasksContainer.module.scss
+++ b/src/components/pages/BoardLayout/Column/TasksContainer/TasksContainer.module.scss
@@ -1,18 +1,19 @@
 @import '../../../../../common/style/abstracts/mixins';
 
 .tasks {
+  width: 19.5rem;
   height: 100%;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
 
   &__container {
+    width: 21rem;
     max-height: calc(100% - 8.6rem);
     overflow-y: auto;
 
     &::-webkit-scrollbar {
-      position: absolute;
-      width: 2rem;
+      width: .5rem;
     }
 
     &::-webkit-scrollbar-track {
@@ -22,7 +23,7 @@
 
     &::-webkit-scrollbar-thumb {
       background: $main-color-hover;
-      box-shadow: .8rem 0 white inset, -0.8rem 0 white inset, ;
+      border-radius: .25rem;
     }
   }
 }
