--- a/src/components/common/Header/Logo/Logo.module.scss
+++ b/src/components/common/Header/Logo/Logo.module.scss
@@ -4,6 +4,12 @@
 .container {
   display: flex;
 
+  .logo {
+    width: 4.4rem;
+    height: 4rem;
+    background: url('../../../../../public/home/logo.svg') no-repeat center;
+  }
+
   h2 {
     @include button-font;
     line-height: 2rem;
