--- a/src/components/pages/BoardLayout/Column/Column.module.scss
+++ b/src/components/pages/BoardLayout/Column/Column.module.scss
@@ -3,32 +3,13 @@
 .column {
   position: relative;
   width: 23.5rem;
-  height: 100%;
+  min-height: 15rem;
+  max-height: calc(100% - 1rem);
+  display: flex;
+  flex-direction: column;
   background: white;
   box-shadow: 0 0.4rem 0.6rem #b7c8e040;
   border-radius: 0.4rem;
   padding: 2.4rem 2rem 2rem;
-
-  &__heading {
-    @include h5;
-    width: 17rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-
-  &__delete {
-    position: absolute;
-    top: 2.6rem;
-    right: 2.3rem;
-    width: 1.6rem;
-    height: 1.6rem;
-    background: url('../../../../../public/assets/icons/deskLayout/garbage.svg') no-repeat center;
-    cursor: pointer;
-    transition: 0.3s;
-
-    &:hover {
-      transform: scale(1.3);
-    }
-  }
+  overflow: hidden;
 }
