--- a/src/components/pages/DeskLayout/ModalDesk/ModalDesk.module.scss
+++ b/src/components/pages/DeskLayout/ModalDesk/ModalDesk.module.scss
@@ -10,7 +10,7 @@
   gap: 3rem;
   background: white;
   box-shadow: 0px 4px 8px rgba(80, 80, 80, 0.25);
-  border-radius: .4rem;
+  border-radius: 0.4rem;
 }
 
 .heading {
@@ -62,9 +62,9 @@
   width: 100%;
   height: 48px;
   border: 1px solid $font-second-color;
-  border-radius: .4rem;
+  border-radius: 0.4rem;
   padding: 1.5rem 2rem;
-  transition: .3s;
+  transition: 0.3s;
 
   &::placeholder {
     @include second-font($font-second-color);
@@ -73,13 +73,13 @@
   &:focus {
     outline: none;
     border-color: $main-color;
-    box-shadow: 0 0 0 .1rem $main-color;
+    box-shadow: 0 0 0 0.1rem $main-color;
   }
 
   &__wrapper {
     & span {
       @include input-signature-font($font-second-color);
-      margin-bottom: .2rem;
+      margin-bottom: 0.2rem;
     }
   }
 }
@@ -90,16 +90,19 @@
 
   &::-webkit-scrollbar {
     position: absolute;
-    width: .5rem;
+    width: 0.5rem;
   }
 
   &::-webkit-scrollbar-track {
     background: white;
-    border-radius: .25rem;
+    border-radius: 0.25rem;
   }
 
   &::-webkit-scrollbar-thumb {
     background: $main-color-hover;
-    border-radius: .25rem;
+    border-radius: 0.25rem;
   }
+}
+.buttonContainer {
+  margin-top: 4rem;
 }
