fix: fix style bugs

--- a/src/components/pages/BoardLayout/Column/Column.module.scss
+++ b/src/components/pages/BoardLayout/Column/Column.module.scss
@@ -7,6 +7,7 @@
   max-height: calc(100% - 1rem);
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   background: white;
   box-shadow: 0 0.4rem 0.6rem #b7c8e040;
   border-radius: 0.4rem;
